# safespark

./: README.md  pyproject.toml
safespark/: __init__.py  dataset.py  functions.py  generate.py  types.py
safespark/tests/: test_exprs.py  test_generation.py
safespark/tests/test_datasets/iris/spark/: iris.parquet
