[project]
optional-dependencies = { dev = ["pyspark>=3.0.0"] }
name = "safespark"
readme = "README.md"
description = "Create safer spark pipelines"
requires-python = ">=3.10"
authors = [{ name = "Emil Redzik", email = "kontakt@eredzik.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ['pyspark']
version = "0.1.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
